
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using bzr commit -m 'Comment').
  
   171: AstroFloyd, 13/11/2011:
     - Plt: added variables 159, 160: Porb (hr), Porb (min)
     
   170: AstroFloyd, 03/11/2011:
     - Updated CMake files to CMakeFiles rev.11:
       - renamed CompilerFlags -> CompilerFlags_Fortran
       - CompilerFlags_Fortran: introduce OPT variable
       - FindLibSUFR: search for compiler-specific headers/libraries
       - FindLibSUFR, FindPGPLOT: clearer Found messages
     
   169: AstroFloyd, 26/10/2011:
     - Updated FindLibSUFR.cmake to default
   
   168: AstroFloyd, 26/10/2011:
     - Updated CMakeLocations.cmake, FindPGPLOT.cmake to default
   
******************************************************************************************
   167: AstroFloyd, 19/10/2011:  *** SF v0.1.2 ***
     - Converted revision numbers from svn to bzr (i.e., bzr# = svn# + 1) in ChangeLog.txt
     - Updated Doxygen comments
     - Updated Doxyfile
     
   166: AstroFloyd, 19/10/2011  (was svn rev.165)
     - Make sure the code compiles with g95 (even if it can't run)
     
   165: AstroFloyd, 19/10/2011
     - plotplt: 
       - t-t_final (var 133): start at 10^3 years iso 10^4 years
       - add companion labels (*1/*2) to legend
     - mdl:
       - BUGFIX: read_first_mdls(): read file if blk.gt.0, not .gt.1
       - add dummy variable blk to read_chosen_mdl()
       
   164: AstroFloyd, 19/10/2011
     - Updated CMake, using options from CMakeFiles
     
   163: AstroFloyd, 08/06/2011
     - plotmdl: added read_chosen_mdl()
     - Added plotmdln_new.f90 to start using mdl_functions
     
   162: AstroFloyd, 08/06/2011
     - plotplt:
       - replace Ebind contribution ratios by their absolute values
       - fix memory allocation when reading different model
       - fix double-axes plotted for logarithmic Kippenhahn plot
       
   161: AstroFloyd, 01/06/2011