@@ -1,7 +1,15 @@
-# Compiler flags for Fortran compilers
+## CompilerFlags_Fortran.cmake
+## Compiler flags for Fortran compilers
+## Currently, specific flags for gfortran, g95 and ifort are provided
+
 
 # Get compiler name:
 get_filename_component( Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME )
+
+# Are we on Linux?
+if( ${CMAKE_SYSTEM_NAME} MATCHES "Linux" )
+  set( LINUX TRUE )
+endif( ${CMAKE_SYSTEM_NAME} MATCHES "Linux" )
 
 
 ######################################################################################################################################################
@@ -9,8 +17,20 @@ get_filename_component( Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME )
 ######################################################################################################################################################
 if( Fortran_COMPILER_NAME MATCHES "gfortran" )
   
-  set( CMAKE_Fortran_FLAGS_ALL "-std=f2008 -fall-intrinsics -pedantic" )               # v.4.4
-  #set( CMAKE_Fortran_FLAGS_ALL "-fwhole-file -std=f2008 -fall-intrinsics -pedantic" )  # v.4.5
+  # Get compiler version:
+  exec_program(
+    ${CMAKE_Fortran_COMPILER}
+    ARGS --version
+    OUTPUT_VARIABLE _compiler_output)
+  string(REGEX REPLACE ".* ([0-9]\\.[0-9]\\.[0-9]).*" "\\1"
+    COMPILER_VERSION ${_compiler_output})
+  
+  
+  set( CMAKE_Fortran_FLAGS_ALL "-std=f2008 -fall-intrinsics -pedantic" )
+  if( COMPILER_VERSION VERSION_GREATER "4.4.99" )
+    set( CMAKE_Fortran_FLAGS_ALL "${CMAKE_Fortran_FLAGS_ALL} -fwhole-file" )  # >= v.4.5
+  endif( COMPILER_VERSION VERSION_GREATER "4.4.99" )
+  
   set( CMAKE_Fortran_FLAGS "-pipe -funroll-all-loops" )
   set( CMAKE_Fortran_FLAGS_RELEASE "-pipe -funroll-all-loops" )
   set( CMAKE_Fortran_FLAGS_DEBUG "-g -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" )
@@ -30,8 +50,13 @@ if( Fortran_COMPILER_NAME MATCHES "gfortran" )
   endif( WANT_STATIC )
   
   if( WANT_CHECKS )
-    set( CHECK_FLAGS "-fbounds-check -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" ) # v.4.4
-    #set( CHECK_FLAGS "-fcheck=all -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" )  # v.4.5
+    set( CHECK_FLAGS "-ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" )
+    if( COMPILER_VERSION VERSION_GREATER "4.4.99" )
+      set( CHECK_FLAGS "-fcheck=all ${CHECK_FLAGS}" )    # >= v.4.5
+    else( COMPILER_VERSION VERSION_GREATER "4.4.99" )
+      set( CHECK_FLAGS "-fbounds-check ${CHECK_FLAGS}" ) # <= v.4.4
+    endif( COMPILER_VERSION VERSION_GREATER "4.4.99" )
+
     set( OPT_FLAGS "-O0" )
   else( WANT_CHECKS )
     set( OPT_FLAGS "-O2" )
@@ -55,6 +80,14 @@ if( Fortran_COMPILER_NAME MATCHES "gfortran" )
   
   ####################################################################################################################################################
 elseif( Fortran_COMPILER_NAME MATCHES "g95" )
+  
+  # Get compiler version:
+  exec_program(
+    ${CMAKE_Fortran_COMPILER}
+    ARGS --version
+    OUTPUT_VARIABLE _compiler_output)
+  string(REGEX REPLACE ".*g95 ([0-9]*\\.[0-9]*).*" "\\1"
+    COMPILER_VERSION ${_compiler_output})
   
   
   set( CMAKE_Fortran_FLAGS "" )
@@ -90,9 +123,20 @@ elseif( Fortran_COMPILER_NAME MATCHES "g95" )
   ####################################################################################################################################################
 elseif( Fortran_COMPILER_NAME MATCHES "ifort" )
   
+  # Get compiler version:
+  exec_program(
+    ${CMAKE_Fortran_COMPILER}
+    ARGS --version
+    OUTPUT_VARIABLE _compiler_output)
+  string(REGEX REPLACE ".* ([0-9]*\\.[0-9]*\\.[0-9]*) .*" "\\1"
+    COMPILER_VERSION ${_compiler_output})
   
-  set( CMAKE_Fortran_FLAGS_ALL "-nogen-interfaces -mcmodel=medium" )  # -mcmodel exists for Linux only...
+  
+  set( CMAKE_Fortran_FLAGS_ALL "-nogen-interfaces" )
   set( CMAKE_Fortran_FLAGS "-vec-guard-write -fpconstant -funroll-loops -align all -ip" )
+  if( LINUX )
+    set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -mcmodel=medium" )  # -mcmodel exists for Linux only...
+  endif( LINUX )
   set( CMAKE_Fortran_FLAGS_RELEASE "-vec-guard-write -fpconstant -funroll-loops -align all -ip" )
   set( CMAKE_Fortran_FLAGS_DEBUG "-g -traceback" )
   set( CMAKE_Fortran_FLAGS_PROFILE "-g -gp" )
@@ -126,8 +170,7 @@ elseif( Fortran_COMPILER_NAME MATCHES "ifort" )
   endif( WANT_CHECKS )
   
   if( WANT_WARNINGS )
-    # 8291: W>=D+7 in esW.D format
-    set( WARN_FLAGS "-warn all -stand f03  -diag-disable 8291" )
+    set( WARN_FLAGS "-warn all -stand f03 -diag-disable 8291" )   # 8291: format for ES: too many decimal places (for negative numbers)
   endif( WANT_WARNINGS )
   
   if( WANT_LIBRARY )
@@ -182,7 +225,7 @@ set( CMAKE_Fortran_FLAGS_RELWITHDEBINFO "${CMAKE_Fortran_FLAGS_RELEASE} -g" )
 ######################################################################################################################################################
 
 message( STATUS "" )
-message( STATUS "Using Fortran compiler: " ${Fortran_COMPILER_NAME} " (" ${CMAKE_Fortran_COMPILER}")" )
+message( STATUS "Using Fortran compiler:  ${Fortran_COMPILER_NAME} ${COMPILER_VERSION}  (${CMAKE_Fortran_COMPILER})" )
 
 if( WANT_CHECKS )
   message( STATUS "Compiling with run-time checks:  ${CHECK_FLAGS}" )
